<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#000000"
    android:useDefaultMargins="true"
    android:rowCount="6"
    android:columnCount="4"
    tools:context=".MainActivity">


    <EditText
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowWeight="2"
        android:layout_columnWeight="4"
        android:id="@+id/ansText"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_default"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="64sp"
        android:textStyle="normal" tools:targetApi="o" />



    <Button
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="3"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_columnSpan="3"
        android:id="@+id/buttonac"
        android:layout_height="86dp"
        android:backgroundTint="#B2B1B0"
        android:text="@string/_ac"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="1"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/buttondiv"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_div"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal" tools:targetApi="o"/>



    <Button
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button7"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button8"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="2"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button9"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="2"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/buttonmul"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_mul"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="normal" tools:targetApi="o"/>



    <Button
        android:layout_row="3"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button4"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="3"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button5"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="3"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button6"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="3"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/buttonsub"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_sub"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal" tools:targetApi="o"/>



    <Button
        android:layout_row="4"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button1"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="4"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button2"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="4"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/button3"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="4"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/buttonadd"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_add"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal" tools:targetApi="o"/>



    <Button
        android:layout_row="5"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="3"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_columnSpan="3"
        android:id="@+id/button0"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal" tools:targetApi="o"/>

    <Button
        android:layout_row="5"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/buttonans"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_ans"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal" tools:targetApi="o"/>

</GridLayout>
