<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button0"
        android:layout_width="280dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/buttonadd"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonsub"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonac" />

    <Button
        android:id="@+id/button8"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonac" />

    <Button
        android:id="@+id/button9"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#4D4E4F"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonmul"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonac" />

    <Button
        android:id="@+id/buttonans"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_ans"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/buttonadd" />


    <Button
        android:id="@+id/buttonadd"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_add"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonsub" />

    <Button
        android:id="@+id/buttonsub"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_sub"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonmul" />

    <Button
        android:id="@+id/buttonmul"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_mul"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttondiv" />

    <Button
        android:id="@+id/buttondiv"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:backgroundTint="#FF9800"
        android:text="@string/_div"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonmul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonac"
        app:layout_constraintTop_toBottomOf="@+id/ansText" />

    <Button
        android:id="@+id/buttonac"
        android:layout_width="280dp"
        android:layout_height="86dp"
        android:backgroundTint="#B2B1B0"
        android:text="@string/_ac"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttondiv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ansText" />

    <EditText
        android:id="@+id/ansText"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_default"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="64sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttonac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>